syntax = "proto3";

package aelf;

option csharp_namespace = "AElf.Kernel.FeeCalculation";

message AllCalculateFeeFunctionCoefficients {
    repeated CalculateFeeFunctionCoefficients value = 1;
}

message CalculateFeeFunctionCoefficients {
    sint32 fee_token_type = 1;
    repeated CalculateFeePieceFunctionCoefficients piece_coefficients_list = 2;
}

message CalculateFeePieceFunctionCoefficients {
    repeated sint32 value = 1;
}